--- a/horske.html
+++ b/horske.html
@@ -12,12 +12,12 @@
 <body>
 <nav class="navbar navbar-expand-lg menu ">
     <div class="container-fluid">
-        <a href="#" class="navbar-brand mb-0 h1">
+        <a href="index.html" class="navbar-brand mb-0 h1">
             <img src="obrazky/logo.webp"
                  class="logo"
                  alt="logo firmy">
         </a>
-        <a class="brand" href="Home.html">All4Cycling</a>
+        <a class="brand" href="index.html">All4Cycling</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
