--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <html lang="en">
 <head>
 
-
     <link href="style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SP-Eshop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
 <nav class="navbar navbar-expand-lg menu ">
     <div class="container-fluid">
-        <a href="#" class="navbar-brand mb-0 h1">
+        <a href="index.html" class="navbar-brand mb-0 h1">
             <img src="obrazky/logo.webp" class="logo" alt="logo firmy">
         </a>
         <a class="brand" href="#">All4Cycling</a>
@@ -31,7 +29,7 @@
                        data-bs-toggle="dropdown" aria-expanded="false">
                         Bicykle
                     </a>
-                    <ul class="dropdown-menu z-index">
+                    <ul class="dropdown-menu z-Home">
                         <li><a class="dropdown-item" href="horske.html">Horské bicykle</a></li>
                         <li><a class="dropdown-item" href="cestne.html">Cestné bicykle</a></li>
                         <li><a class="dropdown-item" href="#">E-bicykle</a></li>
